--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,12 @@
     </repositories>
     
     <dependencies>
-         <dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util-lookup</artifactId>
+            <version>RELEASE701</version>
+        </dependency>
+        <dependency>
             <groupId>de.cismet.cids</groupId>
             <artifactId>cids-server-rest</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -83,6 +88,29 @@
             <artifactId>samson</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <artifactId>log4j</artifactId>
+            <groupId>log4j</groupId>
+            <type>jar</type>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <artifactId>jackson-databind</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <type>jar</type>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <artifactId>jackson-core</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <type>jar</type>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
     
