--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,13 @@
     </prerequisites>
 
     <scm>
-        <connection>scm:git:https://github.com/cismet/cids-custom-crisma-server.git</connection>
-        <developerConnection>scm:git:git@github.com:cismet/cids-custom-crisma-server.git</developerConnection>
-        <url>https://github.com/cismet/cids-custom-crisma-server</url>
+        <connection>scm:git:https://github.com/crismaproject/cids-custom-crisma-server.git</connection>
+        <developerConnection>scm:git:git@github.com:crismaproject/cids-custom-crisma-server.git</developerConnection>
+        <url>https://github.com/crismaproject/cids-custom-crisma-server</url>
     </scm>
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/cismet/cids-custom-crisma-server/issues</url>
+        <url>https://github.com/crismaproject/cids-custom-crisma-server/issues</url>
     </issueManagement>
     <ciManagement>
         <system>jenkins</system>
@@ -84,9 +84,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.conwet.samson</groupId>
+            <groupId>de.cismet.custom</groupId>
             <artifactId>samson</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
