additional console logger

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,6 +7,6 @@ log4j.appender.Remote.port=4445
 log4j.appender.Remote.locationInfo=true
 
 # enable log appender
-log4j.rootLogger=ALL, Remote
+log4j.rootLogger=ALL, Console, Remote
 #log4j.rootLogger=ERROR, Remote
 log4j.logger.org.deegree=WARN
